// LINT: LEGACY_NAMES
syntax = "proto3";

package google.test.remote.ui.action;

option java_package = "androidx.test.espresso.proto.action";

import "google/protobuf/any.proto";

message ClickViewActionProto {
  string id = 1;
  // TODO(b/30594545): check with earl grey team which one of these fields are
  // shared
  Tap tap = 2;
  GeneralLocationProto.Location location = 3;
  PressProto.Precision precision = 4;

  enum Tap {
    SINGLE = 0;
    LONG = 1;
    DOUBLE = 2;
  }

  // Espresso specific fields
  message EspressoProperties {
    int32 input_device = 5;
    int32 button_state = 6;
  }
}

message PressProto {
  enum Precision {
    PINPOINT = 0;
    FINGER = 1;
    THUMB = 2;
  }
}

message GeneralLocationProto {
  enum Location {
    TOP_LEFT = 0;
    TOP_CENTER = 1;
    TOP_RIGHT = 2;
    CENTER_LEFT = 3;
    CENTER = 4;
    CENTER_RIGHT = 5;
    BOTTOM_LEFT = 6;
    BOTTOM_CENTER = 7;
    BOTTOM_RIGHT = 8;
    VISIBLE_CENTER = 9;
  }
}

message TranslatedCoordinatesProviderProto {
  oneof coordsLoc_or_coordsAny {
    GeneralLocationProto.Location coordsLoc = 1;
    google.protobuf.Any coordsAny = 2;
  }
  float dx = 3;
  float dy = 4;
}

message SwipeViewActionProto {
  string id = 1;
  Swipe swipe = 2;
  oneof startCoordsLoc_or_startCoordsAny {
    GeneralLocationProto.Location startCoordsLoc = 3;
    google.protobuf.Any startCoordsAny = 4;
  }
  oneof endCoordsLoc_or_endCoordsAny {
    GeneralLocationProto.Location endCoordsLoc = 5;
    google.protobuf.Any endCoordsAny = 6;
  }
  PressProto.Precision precision = 7;

  enum Swipe {
    FAST = 0;
    SLOW = 1;
  }
}

message AdapterDataLoaderActionProto {
  string id = 1;
  google.protobuf.Any dataToLoadMatcher = 2;
  int32 atPosition = 3;
  bytes adapterViewProtocolClass = 4;
}

message CloseKeyboardActionProto {
  string id = 1;
}

message TypeTextActionProto {
  string id = 1;
  bytes stringToBeTyped = 2;
  bytes tapToFocus = 3;
}

message ReplaceTextActionProto {
  string id = 1;
  bytes stringToBeSet = 2;
}

message EditorActionProto {
  string id = 1;
}

message KeyEventActionProto {
  string id = 1;
  google.protobuf.Any espressoKey = 2;  // from super class
}

message PressBackActionProto {
  string id = 1;
  google.protobuf.Any espressoKey = 2;  // from super class
  bytes conditional = 3;
}

message EspressoKeyProto {
  string id = 1;
  bytes keyCode = 2;
  bytes metaState = 3;
}
