syntax = "proto3";

package google.test.remote.ui;

option java_package = "androidx.test.espresso.proto";

import "google/protobuf/any.proto";

message InteractionRequestProto {
  google.protobuf.Any view_matcher = 1;
  oneof action_or_assertion {
    google.protobuf.Any view_action = 2;
    google.protobuf.Any view_assertion = 3;
  }
  google.protobuf.Any root_matcher = 4;
}

message Error {
  int32 code = 1;
  string description = 2;
  Error nested_error = 3;
}

message InteractionResultProto {
  bool ok = 1;
  google.protobuf.Any payload = 2;
  Error error_msg = 3;
}